--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "cale.cpp"
-                    INCLUDE_DIRS "")
+                    INCLUDE_DIRS ".")
 set(COMPONENTS_DIRS, "components")
