--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -1,12 +1,13 @@
-set(srcs "pretty_effect.c"
+set(srcs 
     "tjpgd.c"
     "epd.cpp"
     )
 
+# Leave as an example of how to add target only for ESP32
 # Only ESP32 has enough memory to do jpeg decoding
-if(IDF_TARGET STREQUAL "esp32")
-    list(APPEND srcs "decode_image.c")
-endif()
+#if(IDF_TARGET STREQUAL "esp32")
+#    list(APPEND srcs "decode_image.c")
+#endif()
 
 idf_component_register(SRCS ${srcs}
                     INCLUDE_DIRS "include"
