#2 Add Adafruit-GFX as a component

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -9,6 +9,7 @@ set(srcs
 #endif()
 
 idf_component_register(SRCS ${srcs}
+                    REQUIRES "Adafruit-GFX"
                     INCLUDE_DIRS "include"
 )
 
