#2 gdeh0213b73 added. Not working for now. Build an ESP32 SPI slave sniffer

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -1,7 +1,8 @@
 # Add only the display srcs you are going to use:
 set(srcs 
-    "models/gdew0213i5f.cpp"
-    "models/gdew027w3.cpp"
+     "models/gdeh0213b73.cpp"
+ #   "models/gdew0213i5f.cpp"
+ #   "models/gdew027w3.cpp"
     "epd.cpp"
     "epdspi.cpp"
     )
