--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Add only the display srcs you are going to use:
 set(srcs 
-     "models/gdeh0213b73.cpp"
+    "models/gdeh0213b73.cpp"
+ #   "models/gdew042t2.cpp"
  #   "models/gdew0213i5f.cpp"
  #   "models/gdew027w3.cpp"
     "epd.cpp"
