#3 Move 213i5f to models/broken. keep on with 27w3

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -1,9 +1,9 @@
 # Add only the display srcs you are going to use:
 set(srcs 
-    "models/gdeh0213b73.cpp"
  #   "models/gdew042t2.cpp"
  #   "models/gdew0213i5f.cpp"
- #   "models/gdew027w3.cpp"
+    "models/gdew027w3.cpp"
+    "models/broken/gdeh0213b73.cpp"
     "epd.cpp"
     "epdspi.cpp"
     )
