Almost working gdew027w3 TTGO T5. Still refreshes more than it should (In loop)

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -1,9 +1,10 @@
 # Add only the display srcs you are going to use:
 set(srcs 
     "models/gdew042t2.cpp"
-    "models/fix/gdeh0213b73.cpp"
     "models/gdew0213i5f.cpp"
- #   "models/gdew027w3.cpp"
+    "models/gdew027w3.cpp"
+ # Pending to fix:
+ #   "models/fix/gdeh0213b73.cpp"
     "epd.cpp"
     "epdspi.cpp"
     )
