gdeh0213b73 fixed. Both full update and partial updates working (2.13 model also used in TTGO esp32)

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -6,7 +6,7 @@ set(srcs
     "models/gdew0213i5f.cpp"
     "models/gdew027w3.cpp"
  # Pending to fix:
- #   "models/fix/gdeh0213b73.cpp"
+    "models/fix/gdeh0213b73.cpp"
     "epd.cpp"
     "epdspi.cpp"
     )
