gdeh0213b73 working, move it back to models directory, update Wiki

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -5,8 +5,9 @@ set(srcs
     "models/gdew042t2.cpp"
     "models/gdew0213i5f.cpp"
     "models/gdew027w3.cpp"
- # Pending to fix:
-    "models/fix/gdeh0213b73.cpp"
+    
+ # Pending for more testing:
+    "models/gdeh0213b73.cpp"
     "epd.cpp"
     "epdspi.cpp"
     )
