Pins for S2 test

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Add only the display srcs you are going to use:
+# Add only the display srcs you are going to use if you want to keep compiled srcs to a minimum:
 set(srcs 
     "models/gdew0583t7.cpp"
     "models/gdew075T7.cpp"
@@ -7,7 +7,7 @@ set(srcs
     "models/gdew027w3.cpp"
     
  # Pending for more testing:
-    "models/gdeh0213b73.cpp"
+ #   "models/gdeh0213b73.cpp"
     "epd.cpp"
     "epdspi.cpp"
     )
