--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -2,6 +2,7 @@
 set(srcs 
     "models/wave12i48.cpp"
     "models/gdew075T7.cpp"
+    "models/gdew075T8.cpp"
  #   "models/gdew0583t7.cpp"
  #   "models/gdew042t2.cpp"
  #   "models/gdew0213i5f.cpp"
