Cale-idf v1.0 release last tests: Add ip address so it sends it in the post request for logging purpouses

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,8 +1,8 @@
 idf_component_register(
     # Main CALE 
-    #SRCS "cale.cpp"
+    SRCS "cale.cpp"
      
-    SRCS "demo-fonts.cpp"
+    #SRCS "demo-fonts.cpp"
     #SRCS "demo-epaper.cpp"
     INCLUDE_DIRS ".")
     
