components: enable all classes as default. Start with demo-sleep-clock example

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -5,8 +5,8 @@ set(srcs
     "models/gdew075T8.cpp"
     "models/gdew0583t7.cpp"
     "models/gdew042t2.cpp"
- #   "models/gdew0213i5f.cpp"
- #   "models/gdew027w3.cpp"
+    "models/gdew027w3.cpp"
+    "models/gdew0213i5f.cpp"
     
  # Pending for more testing:
  #   "models/gdeh0213b73.cpp"
