--- a/platformio.ini
+++ b/platformio.ini
@@ -2,6 +2,6 @@
 src_dir = main
 
 [env:esp32dev]
-platform = https://github.com/platformio/platform-espressif32.git#feature/espidf-40
+platform = https://github.com/platformio/platform-espressif32.git#feature/idf-v4.0
 framework = espidf
 board = esp32dev
