--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,6 @@
 [platformio]
 src_dir = main
+monitor_filters = time
 
 [env:esp32dev]
 platform = https://github.com/platformio/platform-espressif32.git#feature/idf-v4.0
