#4 Implement new 1.54 inches EPD Gdep015OC1 200x200. Needs corrections and debugging

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -7,7 +7,7 @@ set(srcs
     "models/gdew042t2.cpp"
     "models/gdew027w3.cpp"
     "models/gdew0213i5f.cpp"
-    
+    "models/gdep015OC1.cpp"
  # Pending for more testing:
  #   "models/gdeh0213b73.cpp"
     "epd.cpp"
