--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -8,6 +8,7 @@ set(srcs
     "models/gdew027w3.cpp"
     "models/gdew0213i5f.cpp"
     "models/gdep015OC1.cpp"
+    "models/heltec0151.cpp"
  # Pending for more testing:
  #   "models/gdeh0213b73.cpp"
     "epd.cpp"
