#8 Add wiring example for clock and V2 for optimized one time a day WiFi Sync

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,7 +2,7 @@ idf_component_register(
     # Main CALE 
     #SRCS "cale.cpp"
     
-    SRCS "demo-sleep-clock.cpp"
+    SRCS "demo-sleep-clock-v2.cpp"
     #SRCS "demo-fonts.cpp"
     #SRCS "demo-epaper.cpp"
     INCLUDE_DIRS ".")
