#11 Rename class to the right EPD model. Add demo pins to config-examples

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,3 +6,4 @@ monitor_filters = time
 platform = https://github.com/platformio/platform-espressif32.git#feature/idf-v4.0
 framework = espidf
 board = esp32dev
+monitor_speed = 115200
