--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,10 +4,10 @@ idf_component_register(
     
     #SRCS "demo-sleep-clock.cpp"
     #SRCS "demo-sleep-clock-v2.cpp"
-    SRCS "demo-fonts.cpp"
+    #SRCS "demo-fonts.cpp"
     #SRCS "demo-epaper.cpp"
 
-    #SRCS "demo-epaper-plasticlogic.cpp"
+    SRCS "demo-epaper-plasticlogic.cpp"
     INCLUDE_DIRS ".")
     
 set(COMPONENTS_DIRS, "components")
