--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -9,10 +9,12 @@ set(srcs
     "models/gdew0213i5f.cpp"
     "models/gdep015OC1.cpp"
     "models/heltec0151.cpp"
-    "models/plasticlogic011.cpp"
+    "models/plasticlogic/plasticlogic.cpp"
+    "models/plasticlogic/plasticlogic011.cpp"
     
  # Pending for more testing:
  #   "models/gdeh0213b73.cpp"
+     
     "epd.cpp"
     "epdspi.cpp"
     "epdspi2cs.cpp"
