#11 Steps to refactor PlasticLogic in their own directory

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -9,6 +9,8 @@ set(srcs
     "models/gdew0213i5f.cpp"
     "models/gdep015OC1.cpp"
     "models/heltec0151.cpp"
+    # Plasticlogic.com EPD
+    "models/plasticlogic/epdspi2cs.cpp"
     "models/plasticlogic/plasticlogic.cpp"
     "models/plasticlogic/plasticlogic011.cpp"
     
@@ -17,7 +19,6 @@ set(srcs
      
     "epd.cpp"
     "epdspi.cpp"
-    "epdspi2cs.cpp"
     "epd4spi.cpp"
     )
 
