#11 Add PlasticLogic models 21 & 31 (untested)

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -9,15 +9,16 @@ set(srcs
     "models/gdew0213i5f.cpp"
     "models/gdep015OC1.cpp"
     "models/heltec0151.cpp"
-    # Plasticlogic.com EPD
+    # Plasticlogic.com Flex epaper models:
     "models/plasticlogic/epdspi2cs.cpp"
     "models/plasticlogic/plasticlogic.cpp"
     "models/plasticlogic/plasticlogic011.cpp"
     "models/plasticlogic/plasticlogic021.cpp"
-    
- # Pending for more testing:
- #   "models/gdeh0213b73.cpp"
-     
+    "models/plasticlogic/plasticlogic031.cpp"
+
+    # Pending for more testing:
+    #   "models/gdeh0213b73.cpp"
+    # Common base classes
     "epd.cpp"
     "epdspi.cpp"
     "epd4spi.cpp"
