Update sleep-clock to correct month

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,11 +3,11 @@ idf_component_register(
     #SRCS "cale.cpp"
     
     #SRCS "demo-sleep-clock.cpp"
-    #SRCS "demo-sleep-clock-v2.cpp"
+    SRCS "demo-sleep-clock-v2.cpp"
     #SRCS "demo-fonts.cpp"
-    #SRCS "demo-epaper.cpp"
+    SRCS "demo-epaper.cpp"
 
-    SRCS "demo-epaper-plasticlogic.cpp"
+    #SRCS "demo-epaper-plasticlogic.cpp"
     INCLUDE_DIRS ".")
     
 set(COMPONENTS_DIRS, "components")
