Testomg gdew0583z21 3 colors b/w/r

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,7 +3,7 @@ idf_component_register(
     #SRCS "cale.cpp"
     
     #SRCS "demo-sleep-clock.cpp"
-    SRCS "demo-sleep-clock-v2.cpp"
+    #SRCS "demo-sleep-clock-v2.cpp"
     #SRCS "demo-fonts.cpp"
     SRCS "demo-epaper.cpp"
 
