#11 Add tested PlasticLogic014 class. All seems to work great with 11 & 14

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -13,6 +13,7 @@ set(srcs
     "models/plasticlogic/epdspi2cs.cpp"
     "models/plasticlogic/plasticlogic.cpp"
     "models/plasticlogic/plasticlogic011.cpp"
+    "models/plasticlogic/plasticlogic014.cpp"
     "models/plasticlogic/plasticlogic021.cpp"
     "models/plasticlogic/plasticlogic031.cpp"
 
