Restore color version of CALE main cpp example

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,8 +1,8 @@
 idf_component_register(
     # CALE official ESP-IDF Firmware
-    #SRCS "cale.cpp"
+    SRCS "cale.cpp"
     # CALE with grayscale support
-    SRCS "cale-grayscale.cpp"
+    #SRCS "cale-grayscale.cpp"
 
     # Generic demos for any displays
     #SRCS "demo-epaper.cpp"
