Data buffer is inverted for gdeh0213b73. Enable the cpp in CMakeLists

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -19,7 +19,7 @@ set(srcs
     "models/plasticlogic/plasticlogic031.cpp"
 
     # Pending for more testing:
-    #   "models/gdeh0213b73.cpp"
+    "models/gdeh0213b73.cpp"
     # Common base classes
     "epd.cpp"
     "epdspi.cpp"
