#4 Adding gdew075c64 (3 colors b/w/YELLOW - Non tested). New public property uint8_t colors_supported

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,11 +1,11 @@
 idf_component_register(
     # CALE official ESP-IDF Firmware
-    SRCS "cale.cpp"
+    #SRCS "cale.cpp"
     # CALE with grayscale support
     #SRCS "cale-grayscale.cpp"
 
     # Generic demos for any displays
-    #SRCS "demo-epaper.cpp"
+    SRCS "demo-epaper.cpp"
     #SRCS "demo-sleep-clock.cpp"
     #SRCS "demo-sleep-clock-v2.cpp"
     #SRCS "demo-fonts.cpp"
