Repair go to sleep from cale.cpp that was commented. Printf the SPI pins on epdspi.cpp only if display.init(true)

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,7 +1,7 @@
 idf_component_register(
     # CALE official ESP-IDF Firmware
     
-    # SRCS "cale.cpp"
+     SRCS "cale.cpp"
     # CALE with grayscale support (For now only plasticLogic)
     # SRCS "cale-grayscale.cpp"
 
@@ -9,7 +9,7 @@ idf_component_register(
 
     # SRCS "demo-epaper.cpp"
     # SRCS "demo-sleep-clock.cpp"
-      SRCS "demo-sleep-clock-v2.cpp"
+    #  SRCS "demo-sleep-clock-v2.cpp"
     # SRCS "demo-fonts.cpp"
 
     # Demo only for plasticlogic.com epapers:
