Reorder demo code in a new folder demos/

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -9,13 +9,13 @@ idf_component_register(
 
     # Generic demos for any displays
 
-    # SRCS "demo-epaper.cpp"
-    # SRCS "demo-sleep-clock.cpp"
+    # SRCS "demos/demo-epaper.cpp"
+    # SRCS "demos/demo-sleep-clock.cpp"
     # SRCS "demo-sleep-clock-v2.cpp"
-    # SRCS "demo-fonts.cpp"
+    # SRCS "demos/demo-fonts.cpp"
 
     # Demo only for plasticlogic.com epapers:
-    # SRCS "demo-epaper-plasticlogic.cpp"
+    # SRCS "demos/demo-epaper-plasticlogic.cpp"
     INCLUDE_DIRS ".")
     
 set(COMPONENTS_DIRS, "components")
