gdeh042Z96 new 3 color epaper from Goodisplay

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,7 +3,7 @@ idf_component_register(
     
     # SRCS "cale.cpp"
 
-    SRCS "demos/cale-sensor.cpp"
+    # SRCS "demos/cale-sensor.cpp"
     # CALE with grayscale support (For now only plasticLogic)
     # SRCS "cale-grayscale.cpp"
 
