gdeh042Z21 RED buffer added, however there is still a non-default LUT that needs to be sent. Both colors do not combine well like in Gdeh042Z96

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -14,6 +14,7 @@ set(srcs
     "models/color/gdew0583z21.cpp"
     "models/color/gdew075c64.cpp"
     "models/color/gdeh042Z96.cpp"
+    "models/color/gdeh042Z21.cpp"
 
     # Plasticlogic.com Flex epaper models:
     "models/plasticlogic/epdspi2cs.cpp"
