#17 start with touch FT6X36 implementation

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -32,8 +32,10 @@ set(srcs
     "epd4spi.cpp"
     )
 
+# If the project does not use a touch display component FT6X36-IDF can be removed
 idf_component_register(SRCS ${srcs}
                     REQUIRES "Adafruit-GFX"
+                    REQUIRES "FT6X36-IDF"
                     INCLUDE_DIRS "include"
 )
 
