--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,7 +1,7 @@
 idf_component_register(
     # CALE official ESP-IDF Firmware
     
-    # SRCS "cale.cpp"
+    #  SRCS "cale.cpp"
 
     # SRCS "demos/cale-sensor.cpp"
     # CALE with grayscale support (For now only plasticLogic)
@@ -9,7 +9,8 @@ idf_component_register(
 
     # Generic demos for any displays
 
-     SRCS "demos/demo-epaper.cpp"
+    # SRCS "demos/demo-epaper.cpp"
+    SRCS "demos/demo-touch.cpp"
     # SRCS "demos/demo-sleep-clock.cpp"
     # SRCS "demo-sleep-clock-v2.cpp"
     # SRCS "demos/demo-fonts.cpp"
