Update funding. Add ether link donation

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,4 @@
 # These are supported funding model platforms
 github: martinberlin
+custom: ['https://etherdonation.com/d?to=0x68cEAB84F33776a7Fac977B2Bdc0D50933344086']
+
