#17 Start implementing touch inside the Epd class

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -7,10 +7,14 @@ idf_component_register(
     # CALE with grayscale support (For now only plasticLogic)
     # SRCS "cale-grayscale.cpp"
 
-    # Generic demos for any displays
-
+    # Generic demos for touch displays (With an added layer or Gdew027w3T that comes with touch mounted)
     # SRCS "demos/demo-epaper.cpp"
-    SRCS "demos/demo-touch.cpp"
+    
+    # TOUCH examples. 1- Touch indepently from Epd class 2- Touch implemented in Gdew027w3T class
+    # SRCS "demos/demo-touch.cpp"
+    SRCS "demos/demo-touch-epd-implemented.cpp"
+
+    # Generic demos for any displays
     # SRCS "demos/demo-sleep-clock.cpp"
     # SRCS "demo-sleep-clock-v2.cpp"
     # SRCS "demos/demo-fonts.cpp"
