--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -10,8 +10,8 @@ idf_component_register(
     # Generic demos for touch displays (With an added layer or Gdew027w3T that comes with touch mounted)
     # SRCS "demos/demo-epaper.cpp"
     
-    # TOUCH examples. 1- Touch indepently from Epd class 2- Touch implemented in Gdew027w3T class
-    # SRCS "demos/demo-touch.cpp"
+    # TOUCH examples. 1- Touch indepently from Epd class uses Gdew027w3   2- Touch implemented in Gdew027w3T class
+    #SRCS "demos/demo-touch.cpp"
     SRCS "demos/demo-touch-epd-implemented.cpp"
 
     # Generic demos for any displays
