--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 github: martinberlin
-custom: ['https://etherdonation.com/d?to=0x65B7EF685E5B493603740310A84268c6D59f58B5']
+custom: ['https://cale.es/powered-by-ethereum']
