#27 Start refactoring, this will be hard to reorganize, in C looks much better

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -39,6 +39,7 @@ set(srcs
 idf_component_register(SRCS ${srcs}
                     REQUIRES "Adafruit-GFX"
                     REQUIRES "FT6X36-IDF"
+                    REQUIRES "Epdiy-IDF"
                     INCLUDE_DIRS "include"
 )
 
