#27 Start adding IO class: I2SDataBus

--- a/components/Epdiy-IDF/CMakeLists.txt
+++ b/components/Epdiy-IDF/CMakeLists.txt
@@ -1,7 +1,12 @@
 set(srcs 
-    # Common base classes
-    "epd_driver.cpp"
+    # Common base classes that every model has to inherit
+    "epd_driver_base.cpp"
+    "i2s_data_bus.cpp"
     )
 
+# Not sure what model is the Touch: To be confirmed later
 idf_component_register(SRCS ${srcs}
-    INCLUDE_DIRS "include")
+                    REQUIRES "Adafruit-GFX"
+                    REQUIRES "FT6X36-IDF"
+                    INCLUDE_DIRS "include"
+)
