#29 Waveshare 7 colors. Step 1: Header and CPP templates in place, ready to add methods on. Example cpp added in CMakeLists

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -19,6 +19,9 @@ set(srcs
     "models/color/gdeh042Z21.cpp"
     "models/color/wave12i48BR.cpp"
 
+    # 7 colors Waveshare
+    "models/color/wave5i7Color.cpp"
+
     # Plasticlogic.com Flex epaper models:
     "models/plasticlogic/epdspi2cs.cpp"
     "models/plasticlogic/plasticlogic.cpp"
