--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -6,7 +6,7 @@ idf_component_register(
     # SRCS "demos/cale-sensor.cpp"
     # CALE with grayscale support (For now only plasticLogic)
     # Grayscale is also good to test parallel epaper with 16 gray levels
-    SRCS "cale-grayscale.cpp"
+    #SRCS "cale-grayscale.cpp"
 
     # Generic demos for touch displays (With an added layer or Gdew027w3T that comes with touch mounted)
     # SRCS "demos/demo-epaper.cpp"
@@ -21,6 +21,9 @@ idf_component_register(
     # SRCS "demos/demo-sleep-clock.cpp"
     # SRCS "demo-sleep-clock-v2.cpp"
     # SRCS "demos/demo-fonts.cpp"
+
+    # Demo to print 7 colors in Waveshare Acep epapers
+    SRCS "demos/demo-7-colors.cpp"
 
     # Demo only for plasticlogic.com epapers:
     # SRCS "demos/demo-epaper-plasticlogic.cpp"
