#29 Cleaning up, Waveshare first 7 colors 600x448 implemented. Credits: Jean-Marc GxEPD2

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -37,6 +37,7 @@ set(srcs
     "models/gdeh0213b73.cpp"
     # Common base classes
     "epd.cpp"
+    "epd7color.cpp"
     "epdspi.cpp"
     "epd4spi.cpp"
     "epdParallel.cpp"
