--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -9,6 +9,7 @@ set(srcs
     "models/gdew027w3T.cpp"
     "models/gdew0213i5f.cpp"
     "models/gdep015OC1.cpp"
+    "models/gdeh0154d67.cpp"
     "models/heltec0151.cpp"
     
     # 3 colors Goodisplay
