#29 Adding 4.01 class. Still missing right resolution setting (TRES 0x61) for this epaper

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -10,7 +10,7 @@ idf_component_register(
     #SRCS "cale-grayscale.cpp"
 
     # Generic demos for touch displays (With an added layer or Gdew027w3T that comes with touch mounted)
-    SRCS "demos/demo-epaper.cpp"
+    #SRCS "demos/demo-epaper.cpp"
     
     # TOUCH examples. 1- Touch indepently from Epd class uses Gdew027w3   2- Touch implemented in Gdew027w3T class
     #SRCS "demos/demo-touch.cpp"
@@ -24,7 +24,7 @@ idf_component_register(
     # SRCS "demos/demo-fonts.cpp"
 
     # Demo to print 7 colors in Waveshare Acep epapers
-    # SRCS "demos/demo-7-colors.cpp"
+    SRCS "demos/demo-7-colors.cpp"
 
     # Demo only for plasticlogic.com epapers:
     # SRCS "demos/demo-epaper-plasticlogic.cpp"
