--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -34,6 +34,7 @@ set(srcs
 
     # Parallel epapers supported by Epdiy driver (Component)
     "models/parallel/ED047TC1.cpp"
+    "models/parallel/ED047TC1touch.cpp"
 
     # Pending for more testing:
     "models/gdeh0213b73.cpp"
