--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -15,16 +15,17 @@ idf_component_register(
     # TOUCH examples. 1- Touch indepently from Epd class uses Gdew027w3   2- Touch implemented in Gdew027w3T class
     #SRCS "demos/demo-touch.cpp"
     #SRCS "demos/demo-touch-epd-implemented.cpp"
-    
+    SRCS "demos/demo-touch-parallel.cpp"
+
     #SRCS "demos/demo-touch-keyboard.cpp"
 
     # Generic demos for any displays
-    # SRCS "demos/demo-sleep-clock.cpp"
+    #SRCS "demos/demo-sleep-clock.cpp"
     # SRCS "demo-sleep-clock-v2.cpp"
     # SRCS "demos/demo-fonts.cpp"
 
     # Demo to print 7 colors in Waveshare Acep epapers
-    SRCS "demos/demo-7-colors.cpp"
+    #SRCS "demos/demo-7-colors.cpp"
 
     # Demo only for plasticlogic.com epapers:
     # SRCS "demos/demo-epaper-plasticlogic.cpp"
