--- a/components/FT6X36-IDF/CMakeLists.txt
+++ b/components/FT6X36-IDF/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Add only the display srcs you are going to use if you want to keep compiled srcs to a minimum:
 set(srcs 
-    "FTttgo.cpp"
     "FT6X36.cpp"
+    "L58Touch.cpp"
     )
 
 idf_component_register(SRCS ${srcs}
