#38 Add new parallel model ED060SC4 | 6" | 800 x 600

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -36,6 +36,7 @@ set(srcs
     # Parallel epapers supported by Epdiy driver (Component)
     "models/parallel/ED047TC1.cpp"
     "models/parallel/ED047TC1touch.cpp"
+    "models/parallel/ED060SC4.cpp"
 
     # Pending for more testing:
     "models/gdeh0213b73.cpp"
