#38 Provide epd_driver hook for partial update: epd_update_area(mode, area)

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -7,7 +7,7 @@ idf_component_register(
     # SRCS "demos/cale-sensor.cpp"
     # CALE with grayscale support (For now only plasticLogic)
     # Grayscale is also good to test parallel epaper with 16 gray levels
-    SRCS "cale-grayscale.cpp"
+    #SRCS "cale-grayscale.cpp"
 
     # Generic demos for touch displays (With an added layer or Gdew027w3T that comes with touch mounted)
     #SRCS "demos/demo-epaper.cpp"
@@ -30,7 +30,7 @@ idf_component_register(
 
     # Only parallel epapers (Driven by I2Sbus)
     #SRCS "demos/parallel/demo-epaper-parallel.cpp"
-    #SRCS "demos/parallel/demo-epaper-parallel-partial.cpp"
+    SRCS "demos/parallel/demo-epaper-parallel-partial.cpp"
     #SRCS "demos/parallel/demo-touch-parallel.cpp"
     #SRCS "demos/parallel/demo-touch-keyboard.cpp"
     INCLUDE_DIRS ".")
