#39 First steps trying C3

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -33,10 +33,10 @@ set(srcs
     "models/plasticlogic/plasticlogic021.cpp"
     "models/plasticlogic/plasticlogic031.cpp"
 
-    # Parallel epapers supported by Epdiy driver (Component)
-    "models/parallel/ED047TC1.cpp"
-    "models/parallel/ED047TC1touch.cpp"
-    "models/parallel/ED060SC4.cpp"
+    # Parallel epapers supported by Epdiy driver (Uncomment epdParallel & REQUIRES "epd_driver")
+    #"models/parallel/ED047TC1.cpp"
+    #"models/parallel/ED047TC1touch.cpp"
+    #"models/parallel/ED060SC4.cpp"
 
     # Pending for more testing:
     "models/gdeh0213b73.cpp"
@@ -45,7 +45,8 @@ set(srcs
     "epd7color.cpp"
     "epdspi.cpp"
     "epd4spi.cpp"
-    "epdParallel.cpp"
+    # Only for parallel epapers:
+    #"epdParallel.cpp"
     )
 
 # If the project does not use a touch display component FT6X36-IDF can be removed or #commented
@@ -54,7 +55,5 @@ idf_component_register(SRCS ${srcs}
                     REQUIRES "FT6X36-IDF"
                     # Only for parallel epapers:
                     #REQUIRES "epd_driver"
-
                     INCLUDE_DIRS "include"
 )
-
