Restore epd_driver. Only comment this and models/parallel/* if you do not use this type of EPDs

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -53,7 +53,7 @@ idf_component_register(SRCS ${srcs}
                     REQUIRES "Adafruit-GFX"
                     REQUIRES "FT6X36-IDF"
                     # Only for parallel epapers:
-                    #REQUIRES "epd_driver"
+                    REQUIRES "epd_driver"
 
                     INCLUDE_DIRS "include"
 )
