#42 Start adding Rainmaker. 1st try: Independant components

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -53,8 +53,10 @@ set(srcs
 idf_component_register(SRCS ${srcs}      
                     REQUIRES "Adafruit-GFX"
                     REQUIRES "FT6X36-IDF"
-                    
+                    REQUIRES qrcode esp_rainmaker 
                     # Uncomment for parallel epapers:
                     #REQUIRES "epd_driver"
                     INCLUDE_DIRS "include"
 )
+
+target_add_binary_data(${COMPONENT_TARGET} "server.crt" TEXT)
