--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,8 +2,9 @@ idf_component_register(
     # CALE official ESP-IDF Firmware
     
     #SRCS "cale.cpp"
-    SRCS "cale-7-color.cpp"
+    #SRCS "cale-7-color.cpp"
 
+    SRCS "demos/rainmaker/cale-wifi.cpp"
     # SRCS "demos/cale-sensor.cpp"
     # CALE with grayscale support (For now only plasticLogic)
     # Grayscale is also good to test parallel epaper with 16 gray levels
