#38 Do not copile EPDiy as a component in unsupported S2/C3 targets

--- a/components/epd_driver/CMakeLists.txt
+++ b/components/epd_driver/CMakeLists.txt
@@ -1,5 +1,9 @@
 idf_build_get_property(target IDF_TARGET)
+# This component Requires a ESP32 target. Do not build if using this:
 if(${target} STREQUAL "esp32c3")
+        return()
+endif()
+if(${target} STREQUAL "esp32s2")
         return()
 endif()
 
