--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -3,6 +3,7 @@ set(srcs
     "models/wave12i48.cpp"
     "models/gdew075HD.cpp"
     "models/gdew075T7.cpp"
+    "models/gdew075T7Grays.cpp"
     "models/gdew075T8.cpp"
     "models/gdew0583t7.cpp"
     "models/gdew042t2.cpp"
