--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,15 +2,16 @@ idf_component_register(
     # CALE official ESP-IDF Firmware
     
     #SRCS "cale.cpp"
-    SRCS "cale-7-color.cpp"
+    #SRCS "cale-7-color.cpp"
 
     # SRCS "demos/cale-sensor.cpp"
     # CALE with grayscale support (For now only plasticLogic)
     # Grayscale is also good to test parallel epaper with 16 gray levels
-    #SRCS "cale-grayscale.cpp"
+    SRCS "cale-grayscale.cpp"
 
     # Generic demos for touch displays (With an added layer or Gdew027w3T that comes with touch mounted)
     #SRCS "demos/demo-epaper.cpp"
+    #SRCS "demos/demo-4-grays-7inch"
     
     # TOUCH examples. 1- Touch indepently from Epd class uses Gdew027w3   2- Touch implemented in Gdew027w3T class
     #SRCS "demos/demo-touch.cpp"
@@ -20,7 +21,7 @@ idf_component_register(
     # Generic demos for any displays
     #SRCS "demos/demo-sleep-clock.cpp"
     # SRCS "demo-sleep-clock-v2.cpp"
-    # SRCS "demos/demo-fonts.cpp"
+    #SRCS "demos/demo-fonts.cpp"
 
     # Demo to print 7 colors in Waveshare Acep epapers
     #SRCS "demos/demo-7-colors.cpp"
