--- a/main/www-jpg-render/main/CMakeLists.txt
+++ b/main/www-jpg-render/main/CMakeLists.txt
@@ -1,10 +1,14 @@
-#Uncomment only one app_source
+# Uncomment only one app_source
 #set(app_sources "jpg-render.cpp")
+
 # Faster, uses less RAM, but looses dithering functionality:
-set(app_sources "jpg-render-v2.cpp")
+#set(app_sources "jpg-render-v2.cpp")
+
+# Using @bitbank2/JPEGDEC
+set(app_sources "jpgdec-render.cpp")
 
 idf_component_register(SRCS ${app_sources} 
-        REQUIRES CalEPD 
+        REQUIRES CalEPD jpegdec
         nvs_flash esp-tls esp_http_client
         # Embed the server root certificate into the final binary
         EMBED_TXTFILES ${project_dir}/ssl_cert/server_cert.pem
