Color classes in the right folder
models/color cpp needs to be moved too

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -12,10 +12,10 @@ set(srcs
     "models/gdew0213i5f.cpp"
     "models/gdep015OC1.cpp"
     "models/gdeh0154d67.cpp"
-    "models/gdeh0154z90.cpp"
     "models/heltec0151.cpp"
     
     # 3 colors Goodisplay
+    "models/color/gdeh0154z90.cpp"
     "models/color/gdew0583z21.cpp"
     "models/color/gdew075z09.cpp"
     "models/color/gdew075c64.cpp"
