--- a/main/www-image/video/main/CMakeLists.txt
+++ b/main/www-image/video/main/CMakeLists.txt
@@ -3,5 +3,11 @@ set(app_sources "plasticlogic-video.cpp")
 
 idf_component_register(SRCS ${app_sources} 
         REQUIRES CalEPD
+        spiffs
 )
-spiffs_create_partition_image(spiffs ../spiffs FLASH_IN_PROJECT)
+
+# Create a SPIFFS image from the contents of the 'spiffs_image' directory
+# that fits the partition named 'storage'. FLASH_IN_PROJECT indicates that
+# the generated image should be flashed when the entire project is flashed to
+# the target with 'idf.py -p PORT flash'
+spiffs_create_partition_image(storage ../spiffs_image FLASH_IN_PROJECT)
