#53 end of video experiment

--- a/main/www-image/video/main/CMakeLists.txt
+++ b/main/www-image/video/main/CMakeLists.txt
@@ -6,7 +6,7 @@ set(app_sources
 
 idf_component_register(SRCS ${app_sources} 
         REQUIRES CalEPD
-        epd_driver
+        epdiy
         spiffs
 )
 
